--- a/{{cookiecutter. directory_name}}/sonar-project.properties
+++ b/{{cookiecutter. directory_name}}/sonar-project.properties
@@ -1,8 +1,10 @@
-sonar.projectKey={{cookiecutter.kata_name}}
-sonar.projectName={{cookiecutter.kata_name}}
+sonar.host.url=https://sonarcloud.io
+sonar.organization={{cookiecutter.sonar_org}}
+sonar.projectKey={{cookiecutter.sonar_org}}_{{cookiecutter.directory_name}}
+sonar.projectName={{cookiecutter.sonar_org}}_{{cookiecutter.directory_name}}
 sonar.projectVersion=1.1
 sonar.sources=modules/
-sonar.exclusions=tests/**
+sonar.tests=tests/
 sonar.coverage.exclusions=robot/**
 
 #Python specific configuration
