feat: enable the pre-push hook and check that hooks are correctly set up

--- a/{{cookiecutter. directory_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter. directory_name}}/.pre-commit-config.yaml
@@ -14,3 +14,13 @@ repos:
     hooks:
       - id: commitizen
         stages: [ commit-msg ]
+
+  - repo: local
+    hooks:
+      - id: pytest-cov
+        name: pytest
+        stages: [pre-push]
+        language: system
+        entry: pipenv run tests
+        types: [python]
+        pass_filenames: false
