--- a/{{cookiecutter. directory_name}}/.github/workflows/cicd.yml
+++ b/{{cookiecutter. directory_name}}/.github/workflows/cicd.yml
@@ -1,8 +1,55 @@
 name: CI/CD build pipeline with quality gate and coverage
 
+permissions:
+  security-events: write
+
 on: [push]
 
 jobs:
+  snyk_test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@main
+
+      - name: 🐍 Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+  
+      - name: 👷‍ Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pipenv
+          pipenv install --deploy --dev
+      - name: Test the dependencies for security vulnerabilities
+        uses: snyk/actions/python-3.10@master
+        env:
+          # In order to use the Snyk Action you will need to have a Snyk API token.
+          # More details in https://github.com/snyk/actions#getting-your-snyk-token
+          # or you can signup for free at https://snyk.io/login
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          command: test
+          args: --all-projects --sarif-file-output=snyk.sarif -d
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: snyk.sarif
+      - name: Test the code for security vulnerabilities
+        uses: snyk/actions/python@master
+        continue-on-error: true # To make sure that SARIF upload gets called
+        env:
+          # In order to use the Snyk Action you will need to have a Snyk API token.
+          # More details in https://github.com/snyk/actions#getting-your-snyk-token
+          # or you can signup for free at https://snyk.io/login
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          command: code
+          args: test --sarif-file-output=snyk-code.sarif
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: snyk-code.sarif
+
   build:
     runs-on: ubuntu-latest
     strategy:
@@ -31,7 +78,7 @@ jobs:
         pipenv run coverageAzureDevOps
         
     - uses: warchant/setup-sonar-scanner@master
-    
+
     - name: 🫣 Sonar Scanner
       run: sonar-scanner
         -Dsonar.login="${{ secrets.SONAR_TOKEN }}"
