feat: add API with pact tests

--- a/{{cookiecutter. directory_name}}/Pipfile
+++ b/{{cookiecutter. directory_name}}/Pipfile
@@ -4,34 +4,25 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+commitizen = "*"
+pact-python = "*"
+pre-commit = "*"
+pylint = "*"
 pytest = "*"
 pytest-bdd = "*"
+pytest-cov = "*"
+pytest-describe = "*"
 pytest-describe-it = "*"
 pytest-html = "*"
-pytest-cov = "*"
-pytest-pspec = "*"
 pytest-mock = "~=3.6.1"
-pytest-describe = "*"
+pytest-pspec = "*"
 pytest-watch = "*"
-pylint = "*"
-commitizen = "*"
 python-semantic-release = "*"
 
 [packages]
-rich = "*"
-pre-commit = "*"
-setuptools = "*"
+fastapi = '*'
 requests = "*"
-html-to-json = "*"
-dockerfile-parse = "*"
-wget = "*"
-semver = "*"
-sshpubkeys = "*"
-seleniumbase = "*"
-jsonpath-ng = "*"
-click = "*"
-update = "*"
-inquirer = "*"
+uvicorn = '*'
 
 [requires]
 python_version = "3"
@@ -39,13 +30,12 @@ python_version = "3"
 [scripts]
 UnitTests = "pytest tests/unit --tb=long -l"
 IntegrationTests = "pytest tests/integration --tb=long -l"
-E2ETests = "pytest tests/e2e --tb=long -l"
 ReleaseTests = "pytest tests/release --tb=long -l"
 ABTests = "pytest tests/ab --tb=long -l"
-tests = "pytest tests/unit tests/integration tests/e2e tests/release --tb=long -l"
-coverage = "pytest tests/unit tests/integration tests/e2e tests/release  --cov-report term --cov='.' --cache-clear --rootdir='.'"
-coverageHtml = "pytest tests/unit tests/integration tests/e2e tests/release --cov-report html --cov='.'"
-coverageAzureDevOps = "pytest tests/unit tests/integration tests/e2e tests/release --junitxml=junit/test-result.xml --cov-report=xml --cov-report=html --cov='.'  --tb=long -l --cache-clear --rootdir='.'"
+tests = "pytest tests/unit tests/integration tests/release --tb=long -l"
+coverage = "pytest tests/unit tests/integration tests/release  --cov-report term --cov='.' --cache-clear --rootdir='.'"
+coverageHtml = "pytest tests/unit tests/integration tests/release --cov-report html --cov='.'"
+coverageAzureDevOps = "pytest tests/unit tests/integration tests/release --junitxml=junit/test-result.xml --cov-report=xml --cov-report=html --cov='.'  --tb=long -l --cache-clear --rootdir='.'"
 watchUnit = "ptw tests/unit modules/ -- --cov-report term --cov='.' --tb=long -l"
 watchIntegration = "ptw tests/integration modules/ -- --cov-report term --cov='.' --tb=long -l"
 install_pre_hooks = "pre-commit install --install-hooks -t commit-msg -t pre-push -t pre-commit"
