test: add the provider tests for pact

--- a/{{cookiecutter. directory_name}}/Pipfile
+++ b/{{cookiecutter. directory_name}}/Pipfile
@@ -32,11 +32,12 @@ UnitTests = "pytest tests/unit --tb=long -l"
 IntegrationTests = "pytest tests/integration --tb=long -l"
 ReleaseTests = "pytest tests/release --tb=long -l"
 ABTests = "pytest tests/ab --tb=long -l"
-tests = "pytest tests/unit tests/integration tests/release --tb=long -l"
-coverage = "pytest tests/unit tests/integration tests/release  --cov-report term --cov='.' --cache-clear --rootdir='.'"
-coverageHtml = "pytest tests/unit tests/integration tests/release --cov-report html --cov='.'"
-coverageAzureDevOps = "pytest tests/unit tests/integration tests/release --junitxml=junit/test-result.xml --cov-report=xml --cov-report=html --cov='.'  --tb=long -l --cache-clear --rootdir='.'"
+tests = "pytest tests/unit tests/integration tests/release tests/api --tb=long -l"
+coverage = "pytest tests/unit tests/integration tests/release tests/api --cov-report term --cov='.' --cache-clear --rootdir='.'"
+coverageHtml = "pytest tests/unit tests/integration tests/release tests/api --cov-report html --cov='.'"
+coverageAzureDevOps = "pytest tests/unit tests/integration tests/release tests/api --junitxml=junit/test-result.xml --cov-report=xml --cov-report=html --cov='.'  --tb=long -l --cache-clear --rootdir='.'"
 watchUnit = "ptw tests/unit modules/ -- --cov-report term --cov='.' --tb=long -l"
+watchApiConsumer = "ptw tests/api -- --cov-report term --cov='.' --tb=long -l"
 watchIntegration = "ptw tests/integration modules/ -- --cov-report term --cov='.' --tb=long -l"
 install_pre_hooks = "pre-commit install --install-hooks -t commit-msg -t pre-push -t pre-commit"
 linterCheck = "pylint -f msvs modules"
