--- a/{{cookiecutter. directory_name}}/.github/workflows/cicd.yml
+++ b/{{cookiecutter. directory_name}}/.github/workflows/cicd.yml
@@ -6,6 +6,45 @@ permissions:
 on: [push]
 
 jobs:
+  hadolint:
+    name: Verify dockerfile is linted
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@main
+      - uses: hadolint/hadolint-action@master
+        with:
+          dockerfile: Dockerfile
+          failure-threshold: error
+
+  lint:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.11"]
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: 🐍 Set up Python "{{ '${{ matrix.python-version }}' }}"
+      uses: actions/setup-python@v3
+      with:
+        python-version: "{{ '${{ matrix.python-version }}' }}"
+
+    - name: 📌 Load files from cache
+      uses: actions/cache@v3
+      with:
+        path: ~/.local/share/virtualenvs
+        key: {{ "${{ runner.os }}" }}-python-{{ "${{ matrix.python-version }}" }}-pipenv-{{ "${{ hashFiles('Pipfile.lock') }}" }}
+
+    - name: 👷‍ Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pipenv
+        pipenv install --deploy --dev
+
+    - name: 🕵️‍ PyLint
+      run: |
+        pipenv run linterCheck
+
   snyk_test:
     runs-on: ubuntu-latest
     strategy:
@@ -19,7 +58,12 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "{{ '${{ matrix.python-version }}' }}"
-          # cache: 'pipenv'
+        
+      - name: 📌 Load files from cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.local/share/virtualenvs
+          key: {{ "${{ runner.os }}" }}-python-{{ "${{ matrix.python-version }}" }}-pipenv-{{ "${{ hashFiles('Pipfile.lock') }}" }}
   
       - name: 👷‍ Install dependencies
         run: |
@@ -59,6 +103,7 @@ jobs:
 
   pact_tests:
     runs-on: ubuntu-latest
+    needs: [lint, hadolint]
     strategy:
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
@@ -70,7 +115,12 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "{{ '${{ matrix.python-version }}' }}"
-          # cache: 'pipenv'
+        
+      - name: 📌 Load files from cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.local/share/virtualenvs
+          key: {{ "${{ runner.os }}" }}-python-{{ "${{ matrix.python-version }}" }}-pipenv-{{ "${{ hashFiles('Pipfile.lock') }}" }}
   
       - name: 👷‍ Install dependencies
         run: |
@@ -87,10 +137,9 @@ jobs:
           PACT_BROKER_TOKEN: "{{ '${{ secrets.PACT_BROKER_TOKEN }}' }}"
         run: make ci
 
-      
-
-  build:
+  test_and_coverage:
     runs-on: ubuntu-latest
+    needs: [lint]
     strategy:
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
@@ -101,7 +150,12 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "{{ '${{ matrix.python-version }}' }}"
-        # cache: 'pipenv'
+
+    - name: 📌 Load files from cache
+      uses: actions/cache@v3
+      with:
+        path: ~/.local/share/virtualenvs
+        key: {{ "${{ runner.os }}" }}-python-{{ "${{ matrix.python-version }}" }}-pipenv-{{ "${{ hashFiles('Pipfile.lock') }}" }}
 
     - name: 👷‍ Install dependencies
       run: |
@@ -109,15 +163,12 @@ jobs:
         pip install pipenv
         pipenv install --deploy --dev
 
-    - name: 🕵️‍ PyLint
-      run: |
-        pipenv run linterCheck
-
     - name: 🤖 Tests - 🧪 Unit - 🔌 Integration - 👩🏻‍💻 E2E
       run: |
         pipenv run coverageAzureDevOps
-        
-    - uses: warchant/setup-sonar-scanner@master
+
+    - name: 👷‍ Setup Sonar
+      uses: warchant/setup-sonar-scanner@master
 
     - name: 🫣 Sonar Scanner
       run: sonar-scanner
