--- a/{{cookiecutter. directory_name}}/.github/workflows/cicd.yml
+++ b/{{cookiecutter. directory_name}}/.github/workflows/cicd.yml
@@ -6,6 +6,14 @@ permissions:
 on: [push]
 
 jobs:
+  commitlint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@main
+        with:
+          fetch-depth: 0
+      - uses: wagoid/commitlint-github-action@master
+
   hadolint:
     name: Verify dockerfile is linted
     runs-on: ubuntu-latest
