--- a/{{cookiecutter. directory_name}}/Pipfile
+++ b/{{cookiecutter. directory_name}}/Pipfile
@@ -28,16 +28,16 @@ uvicorn = '*'
 python_version = "3"
 
 [scripts]
-UnitTests = "pytest tests/unit --tb=long -l"
-IntegrationTests = "pytest tests/integration --tb=long -l"
-ReleaseTests = "pytest tests/release --tb=long -l"
-ABTests = "pytest tests/ab --tb=long -l"
-tests = "pytest tests/unit tests/integration tests/release tests/api --tb=long -l"
-coverage = "pytest tests/unit tests/integration tests/release tests/api --cov-report term --cov='.' --cache-clear --rootdir='.'"
-coverageHtml = "pytest tests/unit tests/integration tests/release tests/api --cov-report html --cov='.'"
-coverageAzureDevOps = "pytest tests/unit tests/integration tests/release tests/api --junitxml=junit/test-result.xml --cov-report=xml --cov-report=html --cov='.'  --tb=long -l --cache-clear --rootdir='.'"
-watchUnit = "ptw tests/unit modules/ -- --cov-report term --cov='.' --tb=long -l"
-watchApiConsumer = "ptw tests/api -- --cov-report term --cov='.' --tb=long -l"
-watchIntegration = "ptw tests/integration modules/ -- --cov-report term --cov='.' --tb=long -l"
+UnitTests = "pytest tests/unit"
+IntegrationTests = "pytest tests/integration"
+ReleaseTests = "pytest tests/release"
+ApiTests = "pytest tests/api"
+tests = "pytest tests/unit tests/integration tests/release tests/api"
+coverage = "pytest tests/unit tests/integration tests/release tests/api --cache-clear"
+coverageHtml = "pytest tests/unit tests/integration tests/release tests/api --cov-report html"
+coverageAzureDevOps = "pytest tests/unit tests/integration tests/release tests/api --junit-xml=junit/test-result.xml --cov-report=xml --cov-report=html --cache-clear"
+watchUnit = "ptw tests/unit modules/"
+watchApiConsumer = "ptw tests/api"
+watchIntegration = "ptw tests/integration modules/"
 install_pre_hooks = "pre-commit install --install-hooks -t commit-msg -t pre-push -t pre-commit"
 linterCheck = "pylint -f msvs modules"
