--- a/{{cookiecutter. directory_name}}/Makefile
+++ b/{{cookiecutter. directory_name}}/Makefile
@@ -1,6 +1,5 @@
 include .env
 PACTICIPANT := "{{cookiecutter.directory_name}}_app"
-WEBHOOK_UUID := "{{cookiecutter.directory_name}}_client"
 PACT_BROKER_BASE_URL := https://{{cookiecutter.pact_flow_username}}.pactflow.io
 PACT_CLI="docker run --network host --rm -v ${PWD}:${PWD} -e PACT_BROKER_BASE_URL -e PACT_BROKER_TOKEN -e PACT_BROKER_PUBLISH_VERIFICATION_RESULTS pactfoundation/pact-cli:latest"
 
@@ -34,17 +33,7 @@ fake_ci: .env
 publish_pacts: .env
 	@"${PACT_CLI}" publish ${PWD}/pacts --consumer-app-version ${GIT_COMMIT} --branch ${GIT_BRANCH}
 
-ci_webhook: .env
-	make test
-
-fake_ci_webhook:
-	CI=true \
-	GIT_COMMIT=`git rev-parse --short HEAD`+`date +%s` \
-	GIT_BRANCH=`git rev-parse --abbrev-ref HEAD` \
-	PACT_BROKER_PUBLISH_VERIFICATION_RESULTS=true \
-	make ci_webhook
-
-## =====================
+	## =====================
 ## Build/test tasks
 ## =====================
 
@@ -59,7 +48,7 @@ test_provider: .env
 ## Deploy tasks
 ## =====================
 
-deploy: deploy_app tag record_deployment
+deploy: deploy_app record_deployment record_release
 
 no_deploy:
 	@echo "Not deploying as not on master branch"
@@ -76,44 +65,14 @@ can_i_deploy: .env
 deploy_app:
 	@echo "Deploying to prod"
 
-tag: .env
-	@"${PACT_CLI}" broker create-version-tag \
+record_release: .env
+	@"${PACT_CLI}" broker record-release \
 	  --pacticipant ${PACTICIPANT} \
 	  --version ${GIT_COMMIT} \
-		--auto-create-version \
-	  --tag ${GIT_BRANCH}
+	  --environment test
 
 record_deployment: .env
 	@"${PACT_CLI}" broker record-deployment --pacticipant ${PACTICIPANT} --version ${GIT_COMMIT} --environment production
-
-## =====================
-## PactFlow set up tasks
-## =====================
-
-# export the GITHUB_TOKEN environment variable before running this
-create_github_token_secret:
-	curl -v -X POST ${PACT_BROKER_BASE_URL}/secrets \
-	-H "Authorization: Bearer ${PACT_BROKER_TOKEN}" \
-	-H "Content-Type: application/json" \
-	-H "Accept: application/hal+json" \
-	-d  "{\"name\":\"githubToken\",\"description\":\"Github token\",\"value\":\"${GITHUB_TOKEN}\"}"
-
-# NOTE: the github token secret must be created (either through the UI or using the
-# `create_github_token_secret` target) before the webhook is invoked.
-create_or_update_pact_changed_webhook:
-	"${PACT_CLI}" \
-	  broker create-or-update-webhook \
-	  "https://api.github.com/repos/${GITHUB_REPO}/dispatches" \
-	  --header 'Content-Type: application/json' 'Accept: application/vnd.github.everest-preview+json' 'Authorization: Bearer $${user.githubToken}' \
-	  --request POST \
-	  --data '{ "event_type": "pact_changed", "client_payload": { "pact_url": "$${pactbroker.pactUrl}" } }' \
-	  --uuid ${PACT_CHANGED_WEBHOOK_UUID} \
-	  --consumer ${PACTICIPANT} \
-	  --contract-content-changed \
-	  --description "Pact content changed for ${PACTICIPANT}"
-
-test_pact_changed_webhook:
-	@curl -v -X POST ${PACT_BROKER_BASE_URL}/webhooks/${PACT_CHANGED_WEBHOOK_UUID}/execute -H "Authorization: Bearer ${PACT_BROKER_TOKEN}"
 
 ## ======================
 ## Misc
