--- a/{{cookiecutter. directory_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter. directory_name}}/.pre-commit-config.yaml
@@ -15,6 +15,12 @@ repos:
       - id: commitizen
         stages: [ commit-msg ]
 
+  - repo: https://github.com/Yelp/detect-secrets
+    rev: v1.4.0
+    hooks:
+      - id: detect-secrets
+        args: ['--baseline', '.secrets.baseline']
+
   - repo: local
     hooks:
       - id: pytest-cov
