feat: update the scripts and include detect-secrets

--- a/{{cookiecutter. directory_name}}/.github/workflows/cicd.yml
+++ b/{{cookiecutter. directory_name}}/.github/workflows/cicd.yml
@@ -173,7 +173,7 @@ jobs:
 
     - name: 🤖 Tests - 🧪 Unit - 🔌 Integration - 👩🏻‍💻 E2E
       run: |
-        pipenv run coverageAzureDevOps
+        pipenv run coverageDevOps
 
     - name: 👷‍ Setup Sonar
       uses: warchant/setup-sonar-scanner@master
