--- a/{{cookiecutter. directory_name}}/Pipfile
+++ b/{{cookiecutter. directory_name}}/Pipfile
@@ -29,16 +29,19 @@ uvicorn = '*'
 python_version = "3"
 
 [scripts]
-UnitTests = "pytest tests/unit"
-IntegrationTests = "pytest tests/integration"
-ReleaseTests = "pytest tests/release"
-ApiTests = "pytest tests/api"
-tests = "pytest tests/unit tests/integration tests/release tests/api"
 coverage = "pytest tests/unit tests/integration tests/release tests/api --cache-clear"
+coverageDevOps = "pytest tests/unit tests/integration tests/release tests/api --junit-xml=junit/test-result.xml --cov-report=xml --cov-report=html --cache-clear"
 coverageHtml = "pytest tests/unit tests/integration tests/release tests/api --cov-report html"
-coverageAzureDevOps = "pytest tests/unit tests/integration tests/release tests/api --junit-xml=junit/test-result.xml --cov-report=xml --cov-report=html --cache-clear"
-watchUnit = "ptw tests/unit modules/"
-watchApiConsumer = "ptw tests/api"
-watchIntegration = "ptw tests/integration modules/"
-install_pre_hooks = "pre-commit install --install-hooks -t commit-msg -t pre-push -t pre-commit"
+detectSecrets = "detect-secrets-hook --baseline .secrets.baseline"
+detectSecretsAudit = "detect-secrets audit .secrets.baseline"
+detectSecretsUpdate = "detect-secrets scan --baseline .secrets.baseline"
+installHooks = "pre-commit install --install-hooks -t commit-msg -t pre-push -t pre-commit"
 linterCheck = "pylint -f msvs modules"
+testApi = "pytest tests/api"
+testIntegration = "pytest tests/integration"
+testRelease = "pytest tests/release"
+tests = "pytest tests/unit tests/integration tests/release tests/api"
+testUnit = "pytest tests/unit"
+watchTestApi = "ptw tests/api"
+watchTestIntegration = "ptw tests/integration modules/"
+watchTestUnit= "ptw tests/unit modules/"
