--- a/{{cookiecutter. directory_name}}/Pipfile
+++ b/{{cookiecutter. directory_name}}/Pipfile
@@ -29,6 +29,7 @@ uvicorn = '*'
 python_version = "3"
 
 [scripts]
+commit = "cz commit"
 coverage = "pytest tests/unit tests/integration tests/release tests/api --cache-clear"
 coverageDevOps = "pytest tests/unit tests/integration tests/release tests/api --junit-xml=junit/test-result.xml --cov-report=xml --cov-report=html --cache-clear"
 coverageHtml = "pytest tests/unit tests/integration tests/release tests/api --cov-report html"
